test/ui/tests/packages/circular-components-in-same-package/package.stderr
error: the library component `loops` is circular
  --> ${TEST_FOLDER}/packages/circular-components-in-same-package/package.metadata:11:25
   |
11 |         dependencies: { loops: {} },
   |                         ^^^^^
   |

error: the library components `cycle1component2`, `cycle1component0` and `cycle1component1` are circular
  --> ${TEST_FOLDER}/packages/circular-components-in-same-package/package.metadata:19:25
   |
19 |         dependencies: { cycle1component1: {} },
   |                         ^^^^^^^^^^^^^^^^
   |
  --> ${TEST_FOLDER}/packages/circular-components-in-same-package/package.metadata:25:25
   |
25 |         dependencies: { cycle1component2: {} },
   |                         ^^^^^^^^^^^^^^^^
   |
  --> ${TEST_FOLDER}/packages/circular-components-in-same-package/package.metadata:31:25
   |
31 |         dependencies: { cycle1component0: {} },
   |                         ^^^^^^^^^^^^^^^^
   |

error: the library components `cycle2component1` and `cycle2component0` are circular
  --> ${TEST_FOLDER}/packages/circular-components-in-same-package/package.metadata:40:13
   |
40 |             cycle2component1: {},
   |             ^^^^^^^^^^^^^^^^
   |
  --> ${TEST_FOLDER}/packages/circular-components-in-same-package/package.metadata:49:25
   |
49 |         dependencies: { cycle2component0: {}, unrelated: {} },
   |                         ^^^^^^^^^^^^^^^^
   |

error: the library components `snake0` and `snake1` are circular
  --> ${TEST_FOLDER}/packages/circular-components-in-same-package/package.metadata:60:64
   |
60 |     { type: library, name: snake0, path: "s0", dependencies: { snake1: {} } },
   |                                                                ^^^^^^
   |
  --> ${TEST_FOLDER}/packages/circular-components-in-same-package/package.metadata:61:64
   |
61 |     { type: library, name: snake1, path: "s1", dependencies: { snake0: {} } },
   |                                                                ^^^^^^
   |

error: aborting due to 4 previous errors

